--- a/BLOG.html
+++ b/BLOG.html
@@ -9,10 +9,10 @@
   <!-- Menú de navegación igual en todas las páginas -->
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="registro.html">Registro</a></li>
-      <li><a href="contacto.html">Contáctanos</a></li>
+      <li><a href="HOME.html">Home</a></li>
+      <li><a href="BLOG.html">Blog</a></li>
+      <li><a href="REGISTRO.html">Registro</a></li>
+      <li><a href="CONTACTO.html">Contáctanos</a></li>
     </ul>
   </nav>
 
